--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "app/app.js",
   "dependencies": {
     "angular": "^1.5.8",
+    "angular-animate": "^1.5.8",
+    "angular-aria": "^1.5.8",
+    "angular-material": "^1.1.1",
     "angular-route": "^1.5.8",
+    "angular-spotify": "^1.4.1",
     "gulp": "^3.9.1",
     "laravel-elixir": "^6.0.0-11"
   },
