--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "angular-route": "^1.5.8",
     "angular-spotify": "^1.4.1",
     "gulp": "^3.9.1",
-    "laravel-elixir": "^6.0.0-11"
+    "laravel-elixir": "^6.0.0-11",
+    "lodash": "^4.16.2"
   },
   "devDependencies": {
     "laravel-elixir-browsersync-official": "^1.0.0"
